--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       <h2>Brazil</h2>
       <p>Arabica dominates both Brazil and the world as a whole with about 85% of the production; robusta accounts for the remaining 30%. In Brazil, arabica production is located in the main coffee-growing cluster of states led by Rio where arabica is
         produced almost exclusively. Robusta is primarily grown in the northwestern much smaller state of Espirito Santo where about 80% of the coffee is robusta.</p>
-      <a href="#">Learn More about Brazil</a>
+      <a href="/brazil">Learn More about Brazil</a>
     </li>
     <li>
       <h2>Colombia</h2>
