--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <h2>Colombia</h2>
       <p>Colombia has a reputation as producing mild, well balanced coffee beans.Colombia's average annual coffee production of 11.5 million bags is the third total highest in the world, after Brazil and Vietnam; though highest in terms of the arabica
         bean. The beans are exported to United States, Germany, France, Japan, and Italy. Most coffee is grown in the Colombian coffee growing axis region.</p>
-      <a href="#">Learn More about Colombia</a>
+      <a href="/colombia">Learn More about Colombia</a>
     </li>
     <li>
       <h2>India</h2>
