--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jaylens portfolio</title>
+  <title>Jaylen's Portfolio</title>
   <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
