--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h2>Jaylen's Portfolio</h2>
+<p>Make sure you check out my other websites! But there still being made!<br>Ill leave a link in my other websites!</p>
 </body>
 </html>
