--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 <body>
 <h2>Jaylen's Portfolio</h2>
 <p>Make sure you check out my other websites! But there still being made!<br>Ill leave a link in my other websites!</p>
+<p><a herf="https://codepen.io/">Click here for the coding website i did before i started using atom!</p></a>
 </body>
 </html>
