--- a/home.html
+++ b/home.html
@@ -9,5 +9,6 @@
 <h2>Jaylen's Portfolio</h2>
 <p>Make sure you check out my other websites! But there still being made!</p>
 <img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
+<p>Freddy loves people</p>
 </body>
 </html>
