--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 <h2>Jaylen's Portfolio</h2>
 <p>Make sure you check out my other websites! But there still being made!</p>
 <img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
-<p>Freddy loves people</p>
+<h2>Freddy loves people</h2>
+<p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
 </body>
 </html>
