add heading bolding &  "bendy" img

--- a/home.html
+++ b/home.html
@@ -6,10 +6,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h2>Jaylen's Portfolio</h2>
+<h1>Jaylen's Portfolio</h1>
 <p>Make sure you check out my other websites! But there still being made!</p>
 <img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
-<h2>Freddy loves people</h2>
+<h1>VIDEO GAME INFORMATION</h1>
+<h1>Freddy loves people</h1>
 <p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
+<img src+"https://vignette3.wikia.nocookie.net/bendy-and-the-ink-machine/images/3/3a/HesComingForYou.gif/revision/latest?cb=20170420215917">
+<h1>Bendy</h1>
 </body>
 </html>
