--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <h2>VIDEO GAME INFORMATION</h2>
 <h3>Freddy loves people</h3>
 <p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
-<img src="">
+<img src="https://vignette3.wikia.nocookie.net/bendy-and-the-ink-machine/images/3/3a/HesComingForYou.gif/revision/latest?cb=20170420215917">
 <h2>Bendy</h2>
 </body>
 </html>
