--- a/home.html
+++ b/home.html
@@ -15,5 +15,9 @@
 <img src="https://vignette3.wikia.nocookie.net/bendy-and-the-ink-machine/images/3/3a/HesComingForYou.gif/revision/latest?cb=20170420215917">
 <h2>Bendy</h2>
 <p>I heard that chapter 3 comes out September, 2017.<br>You may have all ready played this, but the realise date is September 12th.<br>Bendy is a<strong> ink demon </strong>and is very sensitive about people.<br>He is supposed to be in a cartoon, but his curse has taken over him!</p>
+<h2>Runbow</h2>
+<img src="https://pbs.twimg.com/media/DDXIHTMWsAErD5w.jpg">
+<h3>Runbow information</h3>
+<p>Runbow is a new game that my dad bought on the xbox.<br>My dad loves playing it with me and my sister.<br> (Possibly elsie)</p>
 </body>
 </html>
