add "adventure time" information

--- a/home.html
+++ b/home.html
@@ -19,5 +19,9 @@
 <img src="https://pbs.twimg.com/media/DDXIHTMWsAErD5w.jpg">
 <h3>Runbow information</h3>
 <p>Runbow is a new game that my dad bought on the xbox.<br>My dad loves playing it with me and my sister.<br> (Possibly elsie)</p>
+<h1>FAVORITE TV SHOWS</h1>
+<img src="https://media.giphy.com/media/d8OY8lSOw59du/giphy.gif">
+<h2>Adventure Time</h2>
+<h3>EXTRA EXTRA Read all about it!</h3>
 </body>
 </html>
