"adventure time" information & font size

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
 <h1>FAVORITE TV SHOWS</h1>
 <img src="https://media.giphy.com/media/d8OY8lSOw59du/giphy.gif">
 <h2>Adventure Time</h2>
-<h3>EXTRA EXTRA Read all about it!</h3>
+<h3>Adventure time information:</h3>
+<p>Adventure time is a hulu tv show. Its a show where  a kid named finn with a talking dog named jake who are called heros<br>because they go on quests, fights,<br> and obviosly Adventures!</p>
 </body>
 </html>
