--- a/home.html
+++ b/home.html
@@ -24,5 +24,9 @@
 <h2>Adventure Time</h2>
 <h3>Adventure time information:</h3>
 <p>Adventure time is a hulu tv show. Its a show where  a kid named finn with a talking dog named jake who are called heros<br>because they go on quests, fights,<br> and obviosly Adventures!</p>
+<img src="https://vignette2.wikia.nocookie.net/home-movie/images/6/60/Rihanna-premieres-song-towards-the-sun-of-movie-home.jpg/revision/latest?cb=20150411032601">
+<h2>Home</h2>
+<h3>Home Information</h3>
+<p>Home is a movie when a mystyreuos ailen finds earth the human call them the boov. The boov named oh,<br> had been in a place where he could not fit in. But he finds a girl named tip who unbelivably<br> hates the boov in cause of what happened to her mother. There is a tv show about it on<br> netflix!</p>
 </body>
 </html>
