--- a/home.html
+++ b/home.html
@@ -27,6 +27,6 @@
 <img src="https://vignette2.wikia.nocookie.net/home-movie/images/6/60/Rihanna-premieres-song-towards-the-sun-of-movie-home.jpg/revision/latest?cb=20150411032601">
 <h2>Home</h2>
 <h3>Home Information</h3>
-<p>Home is a movie when a mystyreuos ailen finds earth the human call them the boov. The boov named oh,<br> had been in a place where he could not fit in. But he finds a girl named tip who unbelivably<br> hates the boov in cause of what happened to her mother. There is a tv show about it on<br> netflix!</p>
+<p>Home is a movie when a mystyryrious ailen finds earth the human call them the boov. The boov named oh,<br> had been in a place where he could not fit in. But he finds a girl named tip who unbelivably<br> hates the boov in cause of what happened to her mother. There is a tv show about it on<br> netflix!</p>
 </body>
 </html>
