add html & css information

--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 <body>
 <h1>Jaylen's Portfolio</h1>
 <p>Make sure you check out my other websites! But there still being made!</p>
-<img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
 <h2>VIDEO GAME INFORMATION</h2>
+<img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
 <h3>Freddy loves people</h3>
 <p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
 <img src="https://vignette3.wikia.nocookie.net/bendy-and-the-ink-machine/images/3/3a/HesComingForYou.gif/revision/latest?cb=20170420215917">
@@ -24,9 +24,12 @@
 <h2>Adventure Time</h2>
 <h3>Adventure time information:</h3>
 <p>Adventure time is a hulu tv show. Its a show where  a kid named finn with a talking dog named jake who are called heros<br>because they go on quests, fights,<br> and obviosly Adventures!</p>
-<img src="https://vignette2.wikia.nocookie.net/home-movie/images/6/60/Rihanna-premieres-song-towards-the-sun-of-movie-home.jpg/revision/latest?cb=20150411032601">
+<img src="https://vignette2.wikia.nocookie.net/home-movie/images/6/60/Rihanna-premieres-song-towards-the-sun-of-movie-home.jpg/revision/latest?cb=2015041103260">
 <h2>Home</h2>
 <h3>Home Information</h3>
 <p>Home is a movie when a mystyryrious ailen finds earth the human call them the boov. The boov named oh,<br> had been in a place where he could not fit in. But he finds a girl named tip who unbelivably<br> hates the boov in cause of what happened to her mother. There is a tv show about it on<br> netflix!</p>
+<img src="http://dx35vtwkllhj9.cloudfront.net/universalstudios/sing/images/regions/us/banner.jpg">
+<h2>Sing</h2>
+<p>Sing is a classic movie where Mr. Moon has no hits in his career. He is a theater worker, but he starts to tell about the singing competition. Mrs. Crawly<br> hits a typo and it says they'll win 100,000 dollars when he means 1,000 dollars. He types the typo and they are all exited, but he tries to trick them.<br> Nana Noodleman is the most popular singer in the theater. Nana sees the show and is amazed by the water tank. But is exploded and he was responsible and<br> lost his theater. He feels ashamed and lives in Eddies pool house. The contestents show up. He ingnores them and starts,<br> a new job of washing cars. Meena, one of the contestents, convinces him to start a show and builds one.</p>
 </body>
 </html>
