--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Jaylen's Portfolio</h1>
 <p>Make sure you check out my other websites! But there still being made!</p>
-<h2>VIDEO GAME INFORMATION</h2>
+<h1>VIDEO GAME INFORMATION</h1>
 <img src="https://steamuserimages-a.akamaihd.net/ugc/38610334382875330/7F927636409A435202CD14AC148ADD1100CA7000/">
 <h3>Freddy loves people</h3>
 <p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
@@ -31,5 +31,8 @@
 <img src="http://dx35vtwkllhj9.cloudfront.net/universalstudios/sing/images/regions/us/banner.jpg">
 <h2>Sing</h2>
 <p>Sing is a classic movie where Mr. Moon has no hits in his career. He is a theater worker, but he starts to tell about the singing competition. Mrs. Crawly<br> hits a typo and it says they'll win 100,000 dollars when he means 1,000 dollars. He types the typo and they are all exited, but he tries to trick them.<br> Nana Noodleman is the most popular singer in the theater. Nana sees the show and is amazed by the water tank. But is exploded and he was responsible and<br> lost his theater. He feels ashamed and lives in Eddies pool house. The contestents show up. He ingnores them and starts,<br> a new job of washing cars. Meena, one of the contestents, convinces him to start a show and builds one.</p>
+<h2>FAVORITE THINGS TO TO</h1>
+  <h2>Rollerblading</h2>
+  <p>Rollerbladeing is the most fun thing that i do outside.
 </body>
 </html>
