--- a/home.html
+++ b/home.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <div class="topnav" id-="myTopnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
   <title>Jaylen's Portfolio</title>
   <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -34,5 +40,7 @@
 <h2>FAVORITE THINGS TO TO</h1>
   <h2>Rollerblading</h2>
   <p>Rollerbladeing is the most fun thing that i do outside.
+ <p> hi i am Dominic!</p>
 </body>
 </html>
+<
