--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
 <head>
   <div class="topnav" id-="myTopnav">
     <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
+    <a href="#vidI">Video Game Information</a>
+    <a href="#movieI">Movie Information</a>
     <a href="#about">About</a>
   </div>
   <title>Jaylen's Portfolio</title>
