--- a/home.html
+++ b/home.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="icon-bar">
+  <a class="active" href="#"><i class="fa fa-home"></i></a>
+  <a href="#"><i class="fa fa-search"></i></a>
+  <a href="#"><i class="fa fa-envelope"></i></a>
+  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-trash"></i></a>
+</div>
   <div class="topnav" id-="myTopnav">
     <a class="active" href="#home">Home</a>
     <a href="#vidI">Video Game Information</a>
@@ -39,8 +49,6 @@
 <p>Sing is a classic movie where Mr. Moon has no hits in his career. He is a theater worker, but he starts to tell about the singing competition. Mrs. Crawly<br> hits a typo and it says they'll win 100,000 dollars when he means 1,000 dollars. He types the typo and they are all exited, but he tries to trick them.<br> Nana Noodleman is the most popular singer in the theater. Nana sees the show and is amazed by the water tank. But is exploded and he was responsible and<br> lost his theater. He feels ashamed and lives in Eddies pool house. The contestents show up. He ingnores them and starts,<br> a new job of washing cars. Meena, one of the contestents, convinces him to start a show and builds one.</p>
 <h2>FAVORITE THINGS TO TO</h1>
   <h2>Rollerblading</h2>
-  <p>Rollerbladeing is the most fun thing that i do outside.
- <p> hi i am Dominic!</p>
+  <p>Rollerbladeing is the most fun thing that i do outside. It is what I have been doing for the last 3 years. I can do a lot of things and tricks with it.
 </body>
 </html>
-<
