--- a/home.html
+++ b/home.html
@@ -20,8 +20,39 @@
   <a href="#"><i class="fa fa-globe"></i></a>
   <a href="#"><i class="fa fa-trash"></i></a>
 </div>
+<style>
+.container {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+</style>
 </head>
 <body>
+  <div class="container" onclick="myFunction(this)">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+</div>
 <h1>Jaylen's Portfolio</h1>
 <p>Make sure you check out my other websites! But there still being made!</p>
 <h1>VIDEO GAME INFORMATION</h1>
