--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <p>Five Nights at Freddy's is my 2nd favorite horror game,<br> but i have other games to play. Like BATIM (Bendy and the Ink Machine)<br> and lots of games!!!!!!!!!!!!</p>
 <img src="https://vignette3.wikia.nocookie.net/bendy-and-the-ink-machine/images/3/3a/HesComingForYou.gif/revision/latest?cb=20170420215917">
 <h2>Bendy</h2>
-<p>I heard that chapter 3 comes out September, 2017.<br>You may have all ready played this, but the realise date is September 12th.<br>Bendy is a<strong> ink demon </strong>and is very sensitive about people.<br>He is supposed to be in a cartoon, but his curse has taken over him!</p>
+<p>I heard that chapter 3 comes out September, 2017.<br>You may have all ready played this, but the realise date of this website is September 12th.<br>Bendy is a<strong> ink demon </strong>and is very sensitive about people.<br>He is supposed to be in a cartoon, but his curse has taken over him!</p>
 <h2>Runbow</h2>
 <img src="https://pbs.twimg.com/media/DDXIHTMWsAErD5w.jpg">
 <h3>Runbow information</h3>
@@ -36,7 +36,8 @@
 <h2>Sing</h2>
 <p>Sing is a classic movie where Mr. Moon has no hits in his career. He is a theater worker, but he starts to tell about the singing competition. Mrs. Crawly<br> hits a typo and it says they'll win 100,000 dollars when he means 1,000 dollars. He types the typo and they are all exited, but he tries to trick them.<br> Nana Noodleman is the most popular singer in the theater. Nana sees the show and is amazed by the water tank. But is exploded and he was responsible and<br> lost his theater. He feels ashamed and lives in Eddies pool house. The contestents show up. He ingnores them and starts,<br> a new job of washing cars. Meena, one of the contestents, convinces him to start a show and builds one.</p>
 <h2>FAVORITE THINGS TO TO</h1>
+  <img src="https://summitsports.scene7.com/is/image/SummitSports/375773_375773_1?$600$">
   <h2>Rollerblading</h2>
-  <p>Rollerbladeing is the most fun thing that i do outside. It is what I have been doing for the last 3 years. I can do a lot of things and tricks with it.
+  <p>Rollerbladeing is the most fun thing that i do outside. It is what I have been doing for the last 3 years. I can do a lot of things and tricks with it.<br> Rollerblading is not that popular, but that does not mean others can't be good at it. I am not pro yet, but I can try.<br> The first time I was rollerblading I couldn't go on two feet, so I went on one foot, and I can still do that! I am not trying to brag about how good I am at Rollerblading, I am just trying to persuade you to rollerblade!</p>
 </body>
 </html>
