--- a/home.html
+++ b/home.html
@@ -43,8 +43,6 @@
   <h2>Youtube</h2>
   <p>Youtube is my favorite thing to do. My favorite youtube channel is denisdaily. He is action-packed! So action-packed, I jump around when I see a new video.<br> This image right here is one of his videos called "Denis Sucks at Minecraft episode 37". It is where denis, in his last video, he killed the wither and in this episode he made the beacon.<br> Oh, that was my favorite episode of the whole series.</p>
   <a href="https://www.youtube.com/watch?v=3hyqh25nYs8">Here is his first video on the seires!</a>
-<p> Wait! You think we are done with youtube information? I'm sorry, but you're wrong! Here is my second favorite youtuber!</p>
-<h2> UnspeakableGaming</h2>
-<p> UnspeakableGaming is crazy, but he does pretty cool stuff! He plays minecraft, and minecraft, and minecraft, and minecraft! (All he plays is minecraft! :) ) His favorite item in minecraft is TNT. He LOVES blowing stuff up! Even his intro has him blowing himself up with TNT.
-</body>
-</html>
+<p>Do you think I am done?<br>Sorry, but I got more!!</p>
+<h2>UnspeakableGaming</h2>
+<p>UnspeakalbeGaming is my 2nd favorite youtuber. My dad says I should not watch him because he is two crazy.<br> Me and my friend are at war because we argue about how Denis is better than Unspeakable, or Unspeakable is better than Denis.<br> I don't watch Unspeakable anymore, but I still consider him a a youtuber I like.</p>
