--- a/home.html
+++ b/home.html
@@ -116,3 +116,5 @@
   <br>
   Then you place beartraps, meat, and cameras to have proof that Bigfoot is real.
 </p>
+
+<a href="https://www.youtube.com/watch?v=feXRXXinEVo">Here is his first video on the "Finding Bigfoot" seires!</a>
